# ofc-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/cpu/: Cargo.toml
crates/cpu/src/: lib.rs
crates/cpu/tests/: cpu.rs
crates/engine/: Cargo.toml
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: lib.rs
crates/engine-wasm/tests/: game_api.rs  json_api.rs
crates/engine/benches/: eval.rs
crates/engine/src/: board.rs  card.rs  evaluate.rs  fantasyland.rs  foul.rs  game.rs  hand.rs  joker.rs  lib.rs  royalty.rs  ruleset.rs  scoring.rs
crates/engine/tests/: board.rs  card_wire.rs  eval_oracle.rs  evaluate_board.rs  fantasyland.rs  foul.rs  game.rs  game_fl.rs  game_serde.rs  hand_eval.rs  joker.rs  joker_oracle.rs  random_move.rs  royalty.rs  ruleset.rs  scoring.rs  wire_serde.rs
docs/: README.md  architecture.md  charter.md
docs/decisions/: 0000-template.md  0001-record-architecture-decisions.md  0002-use-rust-core-with-wasm-distribution.md  0003-wire-types-and-ruleset-compilation.md
